--- a/src/styles/index.module.scss
+++ b/src/styles/index.module.scss
@@ -3,6 +3,8 @@
 	flex-direction: column;
 	padding: 1em;
 	height: 100vh;
+
+	max-width: 800px;
 }
 
 .contentContainer {
@@ -10,13 +12,10 @@
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	justify-content: center;
-
-	max-width: 800px;
+	justify-content: space-evenly;
 }
 
 .introductionText {
-	margin: 3em;
 	font-size: 2em;
 	text-align: justify;
 	text-align-last: center;
@@ -34,7 +33,10 @@
 	display: flex;
 	align-items: center;
 	justify-content: space-around;
-	width: 10em;
+
+	a {
+		margin: 0.4em;
+	}
 
 	svg {
 		transition: color 0.2s, transform 0.2s;
